теперь RS и TRS не сохраняют дубликаты получателей