@@ -6,7 +6,7 @@ import com.bnk.taskresolverservice.dtos.ListsInfoUpdateMessage;
 import com.bnk.taskresolverservice.dtos.RecipientDto;
 import com.bnk.taskresolverservice.entities.Recipient;
 import com.bnk.taskresolverservice.entities.RecipientList;
-import com.bnk.taskresolverservice.repositories.RecipientListNameRepository;
+import com.bnk.taskresolverservice.repositories.RecipientListRepository;
 import com.bnk.taskresolverservice.repositories.RecipientRepository;
 import jakarta.transaction.Transactional;
 import lombok.AccessLevel;
@@ -16,7 +16,6 @@ import lombok.experimental.FieldDefaults;
 import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
@@ -24,17 +23,23 @@ import java.util.stream.Collectors;
 @AllArgsConstructor
 public class ListsUpdateServiceImpl {
 
-    RecipientListNameRepository recipientListNameRepository;
+    RecipientListRepository recipientListRepository;
     RecipientRepository recipientRepository;
     RecipientsSaverServiceRestClient recipientsSaverServiceRestClient;
     static Integer REQUEST_PAGE_SIZE = 10;
+
+    //TODO: а мб тут рубильник какой-то сделать с проверкой существования списка?
+    //мб ситуация пользователь создал список и тут же его удалил
+    //а TRS будет пытаться затянуть его себе
+    //КОРОЧЕ ГОВОРЯ ОБДУМАТЬ
+    @Transactional
     public void processLUIMessage(ListsInfoUpdateMessage message) {
         if (message.getEventType().equals(ListInfoUpdateEventType.CREATION)) {
             String listName = message.getNewListName();
             String userId = message.getUserId();
             RecipientList recipientListWithId =
-                    recipientListNameRepository.findByNameAndUserId(listName, userId)
-                            .orElseGet(() -> recipientListNameRepository.save(
+                    recipientListRepository.findByNameAndUserId(listName, userId)
+                            .orElseGet(() -> recipientListRepository.save(
                                     new RecipientList(listName, userId))
                             );
             boolean lastPage = false;
@@ -45,14 +50,17 @@ public class ListsUpdateServiceImpl {
                                 listName, userId, pageNumber++, REQUEST_PAGE_SIZE
                         );
                 lastPage = recipientDtoPage.isLast();
-                recipientRepository.saveAll(recipientDtoPage.stream().map(
-                            dto-> new Recipient(
-                                    dto.getLastname(),
-                                    dto.getEmail(),
-                                    dto.getTg(),
-                                    dto.getToken(),
-                                    recipientListWithId)
-                        ).collect(Collectors.toList())
+                recipientListWithId.getRecipientList().addAll(
+                        recipientDtoPage
+                                .stream()
+                                .map(
+                                        dto-> new Recipient(
+                                                dto.getLastname(),
+                                                dto.getEmail(),
+                                                dto.getTg(),
+                                                dto.getToken(),
+                                                recipientListWithId))
+                                .toList()
                 );
             }
         }
